Created AudienceStatistics REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.audience_statistics_item.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.audience_statistics_item.default.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.paragraph.audience_statistics_item.field_text_value
     - paragraphs.paragraphs_type.audience_statistics_item
   module:
-    - entity_reference_revisions
+    - paragraphs
 id: paragraph.audience_statistics_item.default
 targetEntityType: paragraph
 bundle: audience_statistics_item
@@ -18,11 +18,14 @@ content:
   field_background_image:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_label:
     weight: 0
@@ -35,11 +38,14 @@ content:
   field_link:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_text_value:
     weight: 1
