--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_blocks
     - node.type.page
     - paragraphs.paragraphs_type.block_audience_reach
+    - paragraphs.paragraphs_type.block_audience_statistics
     - paragraphs.paragraphs_type.block_core_product_message
     - paragraphs.paragraphs_type.block_download_file_a
     - paragraphs.paragraphs_type.block_hero_quaternary
@@ -96,6 +97,7 @@ settings:
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_reach: block_audience_reach
+      block_audience_statistics: block_audience_statistics
       block_core_product_message: block_core_product_message
       block_download_file_a: block_download_file_a
       block_hero_quaternary: block_hero_quaternary
@@ -269,8 +271,8 @@ settings:
         enabled: true
         weight: 100
       block_audience_statistics:
+        enabled: true
         weight: 101
-        enabled: false
       block_audience_statistics_b:
         weight: 102
         enabled: false
