--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_success_stories_b.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.paragraph.block_success_stories_b.field_styles
     - paragraphs.paragraphs_type.block_success_stories_b
   module:
-    - entity_reference_revisions
     - paragraphs
     - text
 id: paragraph.block_success_stories_b.default
@@ -20,13 +19,13 @@ bundle: block_success_stories_b
 mode: default
 content:
   field_alignment:
-    weight: 5
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_articles:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -35,16 +34,19 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_new_heading:
-    weight: 2
+    weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
