--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -9,6 +9,8 @@ dependencies:
     - paragraphs.paragraphs_type.block_audience_statistics
     - paragraphs.paragraphs_type.block_core_product_message
     - paragraphs.paragraphs_type.block_download_file_a
+    - paragraphs.paragraphs_type.block_glossary_a
+    - paragraphs.paragraphs_type.block_glossary_b
     - paragraphs.paragraphs_type.block_hero_quaternary
     - paragraphs.paragraphs_type.block_infographic
     - paragraphs.paragraphs_type.block_main_product_nav
@@ -79,31 +81,33 @@ settings:
       blockmore: blockmore
       blockblogpost: blockblogpost
       blockherosecondary: blockherosecondary
-      blockheromain: blockheromain
       blockmap: blockmap
+      blockheromain: blockheromain
       blockmapsecondary: blockmapsecondary
       blockmarketmap: blockmarketmap
       blocknetworkoverview: blocknetworkoverview
-      blockpagenotfound: blockpagenotfound
       blockherotertiary: blockherotertiary
+      blockpagenotfound: blockpagenotfound
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockquotesecondary: blockquotesecondary
       blockinfo: blockinfo
+      blockquotesecondary: blockquotesecondary
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      block_map_tertiary: block_map_tertiary
       blockfiltercontent: blockfiltercontent
+      block_map_tertiary: block_map_tertiary
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_reach: block_audience_reach
       block_audience_statistics: block_audience_statistics
       block_core_product_message: block_core_product_message
       block_download_file_a: block_download_file_a
+      block_glossary_a: block_glossary_a
+      block_glossary_b: block_glossary_b
       block_hero_quaternary: block_hero_quaternary
       block_infographic: block_infographic
       block_main_product_nav: block_main_product_nav
@@ -140,12 +144,12 @@ settings:
       blockimagecarousel:
         enabled: true
         weight: 13
-      link:
-        weight: 13
-        enabled: false
       blocklatest:
         enabled: true
         weight: 13
+      link:
+        weight: 13
+        enabled: false
       step:
         weight: 15
         enabled: false
@@ -170,10 +174,10 @@ settings:
       blockherosecondary:
         enabled: true
         weight: 23
-      blockheromain:
+      blockmap:
         enabled: true
         weight: 26
-      blockmap:
+      blockheromain:
         enabled: true
         weight: 26
       blockmapsecondary:
@@ -185,10 +189,10 @@ settings:
       blocknetworkoverview:
         enabled: true
         weight: 29
-      blockpagenotfound:
+      blockherotertiary:
         enabled: true
         weight: 30
-      blockherotertiary:
+      blockpagenotfound:
         enabled: true
         weight: 30
       blockpathtopurchase:
@@ -203,21 +207,21 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
       blocksmallheading:
         enabled: true
         weight: 37
-      slideheromain:
-        weight: 38
-        enabled: false
       blocksmallimage:
         enabled: true
         weight: 38
+      slideheromain:
+        weight: 38
+        enabled: false
       stat:
         weight: 39
         enabled: false
@@ -233,10 +237,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -306,11 +310,11 @@ settings:
         weight: 109
         enabled: false
       block_glossary_a:
+        enabled: true
         weight: 110
-        enabled: false
       block_glossary_b:
+        enabled: true
         weight: 111
-        enabled: false
       block_hero_quaternary:
         enabled: true
         weight: 112
@@ -383,10 +387,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
       glossary_a_item:
