--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_blocks
     - node.type.page
+    - paragraphs.paragraphs_type.block_audience_product_top
     - paragraphs.paragraphs_type.block_audience_reach
     - paragraphs.paragraphs_type.block_audience_statistics
     - paragraphs.paragraphs_type.block_core_product_message
@@ -102,6 +103,7 @@ settings:
       block_map_tertiary: block_map_tertiary
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
+      block_audience_product_top: block_audience_product_top
       block_audience_reach: block_audience_reach
       block_audience_statistics: block_audience_statistics
       block_core_product_message: block_core_product_message
@@ -274,8 +276,8 @@ settings:
         weight: 97
         enabled: false
       block_audience_product_top:
+        enabled: true
         weight: 98
-        enabled: false
       block_audience_quote:
         weight: 99
         enabled: false
