Created TripleContent REST API

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.triple_content_item.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.triple_content_item.default.yml
@@ -3,29 +3,28 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.triple_content_item.field_new_heading
+    - field.field.paragraph.triple_content_item.field_main_heading
     - field.field.paragraph.triple_content_item.field_paragraph
     - field.field.paragraph.triple_content_item.field_paragraph_image
     - paragraphs.paragraphs_type.triple_content_item
   module:
-    - entity_reference_revisions
+    - paragraphs
     - text
 id: paragraph.triple_content_item.default
 targetEntityType: paragraph
 bundle: triple_content_item
 mode: default
 content:
-  field_new_heading:
-    weight: 0
+  field_main_heading:
+    weight: 1
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: string_textfield
     region: content
   field_paragraph:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -33,13 +32,16 @@ content:
     type: text_textarea
     region: content
   field_paragraph_image:
-    weight: 2
+    weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
 hidden:
   created: true
