--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_triple_content.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_triple_content.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.paragraph.block_triple_content.field_triple_content_items
     - paragraphs.paragraphs_type.block_triple_content
   module:
-    - entity_reference_revisions
     - paragraphs
 id: paragraph.block_triple_content.default
 targetEntityType: paragraph
@@ -19,11 +18,14 @@ content:
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_scroll_id:
     weight: 1
@@ -36,11 +38,14 @@ content:
   field_styles:
     weight: 0
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_triple_content_items:
     type: entity_reference_paragraphs
