--- a/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -21,6 +21,7 @@ dependencies:
     - paragraphs.paragraphs_type.block_infographic
     - paragraphs.paragraphs_type.block_main_product_nav
     - paragraphs.paragraphs_type.block_map_tertiary
+    - paragraphs.paragraphs_type.block_persona_selector_banner
     - paragraphs.paragraphs_type.block_product_list
     - paragraphs.paragraphs_type.block_success_stories_a
     - paragraphs.paragraphs_type.block_success_stories_b
@@ -88,25 +89,25 @@ settings:
       blockmore: blockmore
       blockblogpost: blockblogpost
       blockherosecondary: blockherosecondary
-      blockmap: blockmap
       blockheromain: blockheromain
+      blockmap: blockmap
       blockmapsecondary: blockmapsecondary
       blockmarketmap: blockmarketmap
       blocknetworkoverview: blocknetworkoverview
-      blockherotertiary: blockherotertiary
       blockpagenotfound: blockpagenotfound
+      blockherotertiary: blockherotertiary
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockinfo: blockinfo
       blockquotesecondary: blockquotesecondary
+      blockinfo: blockinfo
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
-      blockfiltercontent: blockfiltercontent
       block_map_tertiary: block_map_tertiary
+      blockfiltercontent: blockfiltercontent
       block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
       block_audience_product_top: block_audience_product_top
@@ -124,6 +125,7 @@ settings:
       block_image_with_content_b: block_image_with_content_b
       block_infographic: block_infographic
       block_main_product_nav: block_main_product_nav
+      block_persona_selector_banner: block_persona_selector_banner
       block_product_list: block_product_list
       block_success_stories_a: block_success_stories_a
       block_success_stories_b: block_success_stories_b
@@ -158,12 +160,12 @@ settings:
       blockimagecarousel:
         enabled: true
         weight: 13
-      blocklatest:
-        enabled: true
-        weight: 13
       link:
         weight: 13
         enabled: false
+      blocklatest:
+        enabled: true
+        weight: 13
       step:
         weight: 15
         enabled: false
@@ -188,10 +190,10 @@ settings:
       blockherosecondary:
         enabled: true
         weight: 23
-      blockmap:
+      blockheromain:
         enabled: true
         weight: 26
-      blockheromain:
+      blockmap:
         enabled: true
         weight: 26
       blockmapsecondary:
@@ -203,10 +205,10 @@ settings:
       blocknetworkoverview:
         enabled: true
         weight: 29
-      blockherotertiary:
+      blockpagenotfound:
         enabled: true
         weight: 30
-      blockpagenotfound:
+      blockherotertiary:
         enabled: true
         weight: 30
       blockpathtopurchase:
@@ -221,21 +223,21 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
       blocksmallheading:
         enabled: true
         weight: 37
-      blocksmallimage:
-        enabled: true
-        weight: 38
       slideheromain:
         weight: 38
         enabled: false
+      blocksmallimage:
+        enabled: true
+        weight: 38
       stat:
         weight: 39
         enabled: false
@@ -251,10 +253,10 @@ settings:
       blocktext:
         enabled: true
         weight: 42
-      blockfiltercontent:
+      block_map_tertiary:
         enabled: true
         weight: 48
-      block_map_tertiary:
+      blockfiltercontent:
         enabled: true
         weight: 48
       block_video_with_call_to_actions:
@@ -357,8 +359,8 @@ settings:
         weight: 121
         enabled: false
       block_persona_selector_banner:
+        enabled: true
         weight: 122
-        enabled: false
       block_product_list:
         enabled: true
         weight: 123
@@ -401,10 +403,10 @@ settings:
       core_product_message_item:
         weight: 168
         enabled: false
-      device:
+      blog_post_item:
         weight: 169
         enabled: false
-      blog_post_item:
+      device:
         weight: 169
         enabled: false
       glossary_a_item:
