--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_c.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_c.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.video
     - field.field.paragraph.block_video_with_content_c.field_link
     - field.field.paragraph.block_video_with_content_c.field_new_heading
     - field.field.paragraph.block_video_with_content_c.field_paragraph
@@ -12,7 +13,7 @@ dependencies:
     - field.field.paragraph.block_video_with_content_c.field_video
     - paragraphs.paragraphs_type.block_video_with_content_c
   module:
-    - entity_reference_revisions
+    - entity_browser
     - paragraphs
     - text
 id: paragraph.block_video_with_content_c.default
@@ -23,20 +24,26 @@ content:
   field_link:
     weight: 4
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_new_heading:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_paragraph:
     weight: 3
@@ -49,11 +56,14 @@ content:
   field_poster:
     weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_scroll_id:
     type: string_textfield
@@ -78,11 +88,15 @@ content:
   field_video:
     weight: 6
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: video
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
     region: content
 hidden:
   created: true
