--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_large_video.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_large_video.default.yml
@@ -3,13 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.video
     - field.field.paragraph.block_large_video.field_poster
     - field.field.paragraph.block_large_video.field_scroll_id
     - field.field.paragraph.block_large_video.field_styles
     - field.field.paragraph.block_large_video.field_video
     - paragraphs.paragraphs_type.block_large_video
   module:
-    - entity_reference_revisions
+    - entity_browser
     - paragraphs
 id: paragraph.block_large_video.default
 targetEntityType: paragraph
@@ -19,11 +20,14 @@ content:
   field_poster:
     weight: 2
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: entity_reference_paragraphs
     region: content
   field_scroll_id:
     type: string_textfield
@@ -48,11 +52,15 @@ content:
   field_video:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: video
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
     region: content
 hidden:
   created: true
